packages/openneuro-app/src/sass/crn_app/_common.modals.scss
// form input for add app

body
  > div:nth-child(9)
  > div.fade.in.modal
  > div
  > div
  > div.modal-body
  > div
  > div.form-group.admin-job-parameters
  > div
  > div.form-inline
  > div
  > span
  > div:nth-child(4)
  > span
  > li {
  list-style: none;
}

// modal form elements
.parameters {
  margin-top: 10px;

  .form-group {
    padding: 13px 10px 14px 0;

    &:nth-child(odd) {
      background: $f9;
    }

    label {
      font-size: 18px;
      color: $c-42;
      line-height: 21px;
      padding: 0;
      margin: 0;
    }

    .input-group {
      width: 100%;
    }

    .input-group-addon {
      width: 150px;
      white-space: normal;
      text-align: left;
      vertical-align: top;
    }

    input {
      height: 40px;
      font-size: 16px;
      float: none;

      &.checkbox {
        box-shadow: none;
        padding: 0;
        margin: 0;
        height: 0;
        width: 0;
        display: none;
        position: absolute;
        left: -99999em;
      }
    }

    input[type='checkbox'] {
      + label {
        position: relative;
        display: flex;
        margin: 0 0 10px 10px;
        align-items: center;
        color: $c-9e;
        transition: color 250ms cubic-bezier(0.4, 0, 0.23, 1);

        > span {
          @include border-radius(1px);
          display: block;
          margin-right: 0;
          width: auto;
          height: auto;
          background: $transparent;
          border: 2px solid $c-9e;
          cursor: pointer;
          transition: all 250ms cubic-bezier(0.4, 0, 0.23, 1);
          padding: 8px;
          position: relative;
        }

        &:hover {
          color: $white;

          > span {
            background: $transparent1-w;
          }
        }
      }

      &:focus + label {
        color: $white;

        > span {
          background: $transparent1-w;
        }
      }

      &:checked + label {
        > span {
          @include animation(shrink-bounce 200ms cubic-bezier(0.4, 0, 0.23, 1));
          border: 2px solid lighten($brand-success, 10%);
          background: lighten($brand-success, 10%);
          color: $white;
          overflow: hidden;

          &::before {
            @include animation(
              checkbox-check 125ms 250ms cubic-bezier(0.4, 0, 0.23, 1) forwards
            );
            content: '';
            position: absolute;
            top: 0.3em;
            left: 0.1em;
            border-right: 3px solid transparent;
            border-bottom: 3px solid transparent;
            transform: rotate(45deg);
            transform-origin: 0% 100%;
            padding: 5px 2px;
          }
        }
      }
    }
  }

  .help-text {
    font-size: 14px;
    padding: 10px;
    display: block;
    border: 1px solid $ddd;
    margin: 5px 0 0;
    color: $c-9e;
    background: $eee;
  }

  label > input[type='checkbox'] {
    max-width: 20px;
    min-width: 20px;
    border: 0;
    box-shadow: none;
    margin-right: 5px;
    &:focus {
      box-shadow: none;
      outline: 0;
    }
  }

  label.help-text {
    display: flex;
    align-items: center;
    justify-content: left;
    background: none;
    border: 0;

    span {
      padding-left: 8px;
    }

    text-transform: none;
    font-weight: normal;
  }
}

.sign-in-block,
.modal {
  .modal-actions {
    padding: 0;
  }

  .alert {
    position: relative;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    max-width: 100%;
  }
}

.share-modal {
  .select-box-style {
    margin-right: 0;
  }

  .caret-down {
    margin-top: 29px;
  }
}

.display-file {
  .display-file-content {
    background: $transparent;
    height: 100%;

    .display-file-path {
      font-size: 12px;
      .display-file:before {
        content: ' -';
      }
    }

    .display-file-header,
    .display-file-body {
      width: 100%;

      .modal-preview-image {
        width: 100%;
        height: auto;
        text-align: center;
        img {
          max-width: 100%;
          height: auto;
        }
      }
      .json-editor {
        textarea {
          min-height: 500px;
          resize: vertical;
        }

        .json-editor-controls {
          span {
            padding-right: 15px;

            i {
              padding-right: 3px;
            }
          }
        }
      }
    }

    .display-file-header {
      font-size: 20px;
      background: $white;

      .modal-title {
        color: $black;
        font-size: 30px;
        .modal-download {
          display: inline;
          font-size: 18px;
          margin-left: 20px;
          position: relative;
        }
      }
      .close {
        color: $transparent3;
        margin-top: -5px !important;
        font-size: 50px;
        &:focus {
          border: none;
          outline: none;
          box-shadow: none;
        }
      }
    }

    .display-file-body {
      white-space: pre-wrap;
      font-family: monospace;
      height: 95%;
      padding-bottom: 3em;
    }
  }
}

.display-file-modal.nii-gz .modal-dialog .modal-content .modal-body {
  padding: 15px 0px 0px 0px;
  height: 100%;
}

.update-modal {
  .modal-text {
    font-size: 18px;
  }

  .parameters {
    margin: 10px;

    .form-group {
      padding: 5px;
      margin: 0 -15px;

      .input-group {
        .input-group-addon {
          width: auto;
          font-size: 12px;
          margin: 10px 0 0;
          padding: 0 0 0 13px;
          float: left;
          display: block;
        }

        label {
          float: left;
        }
      }
    }
  }
}

.analysis-modal {
  .task-select {
    border: 1px solid $ccc;
    padding: 0;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    select {
      border: 0;
      -webkit-appearance: none;
      -moz-appearance: none;
    }
    select ::-ms-expand {
      display: none;
    }

    .Select-arrow-zone {
      position: absolute;
      display: unset;
      right: 0px;
      top: 10px;
      border: 0;
      box-shadow: none;
      z-index: 15;
      -moz-padding-start: 10px;
      -moz-padding-end: 10px;
      .arrow {
        width: 50%;
      }
    }
  }

  .default-reset {
    padding: 10px;
    text-align: right;

    button {
      color: $primary;
      color: var(--primary);
    }
  }

  .modal-actions {
    margin-top: 10px;
    padding: 0;
  }

  .submit-warning {
    color: red;
    text-align: right;
    float: right;
  }

  .btn-modal-submit:disabled {
    border-color: $transparent3;
    color: $transparent3;
    &:hover {
      background: $transparent3;
    }
  }

  input[type='radio'] {
    max-width: 20px;
    min-width: 20px;
    margin-right: 5px;
    box-shadow: 0px 0px;
    width: 5%;
    &:focus {
      outline: none;
      border: 0px;
    }
  }
}

.modal,
.modal-backdrop {
  z-index: 1500;
}

.modal-open {
  #main {
    @include blur(5px);
    -webkit-transform: translateZ(0);
    -webkit-backface-visibility: hidden;
    -webkit-perspective: 1000;
  }
  .full-col .navbar {
    //used to fix webkit issue with Blur
    position: absolute;
  }
}

.modal-backdrop {
  background: $transparent3;
}

.modal {
  &.fade {
    &.in {
      @extend %slide-in-down;
    }
  }

  .close {
    color: $transparent7;
    opacity: 1;

    &:hover {
      color: $transparent3;
    }
  }

  .modal-dialog {
    @include border-radius(0);
    width: 700px;
    margin: 0 auto;
    padding: 0 0 20px;
    background-color: $white;
    box-shadow: 0 3px 8px $transparent5;

    .modal-content {
      @include border-radius(0);
      border: 0;
      width: 100%;
      box-shadow: none;
      margin: 0 auto;

      hr {
        margin: 0;
      }

      .modal-header {
        width: 700px;
        margin: 0 auto;
        border-bottom: 0;

        .close {
          color: $transparent7;
          opacity: 1;

          &:hover {
            color: $transparent3;
          }
        }
      }

      .modal-body {
        width: 700px;
        margin: 0 auto;
        padding-bottom: 3em;

        .add-members {
          margin: 20px 0 0;
          border-top: 1px solid $eee;
          padding: 20px 0 0;
        }
      }
    }
  }
}

div.rt-resizable-header-content {
  color: $primary;
  color: var(--primary);
  padding: 5px 0px;
  padding-right: 50px !important;
  text-align: left;
}

.rt-th {
  .rt-resizable-header-content::after {
    font-family: FontAwesome;
    content: ' \f0dc';
    position: absolute;
    width: 50px;
    padding-left: 5px !important;
    padding-top: 2px;
  }
}

.rt-th.-sort-desc {
  box-shadow: none !important;

  .rt-resizable-header-content::after {
    font-family: FontAwesome;
    content: ' \f0dd';
    position: absolute;
    width: 50px;
    padding-left: 5px !important;
    padding-top: 2px;
  }
}

.rt-th.-sort-asc {
  box-shadow: none !important;

  .rt-resizable-header-content::after {
    font-family: FontAwesome;
    content: ' \f0de';
    position: absolute;
    width: 50px;
    padding-left: 5px !important;
    padding-top: 2px;
  }
}

.mobile-dropdown {
  /* remove browser-generated caret */
  -webkit-appearance: none;
  
  padding: 5px;
  margin: 5px 0px;
  text-transform: capitalize;
  color: #777;
  font-size: 18px;
  font-family: var(--font-family-open);
  font-weight: lighter;
  border-radius: 2px;
  border: 0;
  box-shadow: inset 0 0 1px 1px $transparent1;

  /* make custom arrow and background */
  background:
  linear-gradient(45deg, transparent 50%, black 50%), 
  linear-gradient(135deg, black 50%, transparent 50%), 
  linear-gradient(to right, white, white);
  background-position:
    calc(100% - 21px) calc(1em + 2px),
    calc(100% - 16px) calc(1em + 2px),
    100% 0;
  background-size:
    5px 5px,
    5px 5px,
    2.5em 2.5em;
  background-repeat: no-repeat;
}

.login-modal {
  div.modal-header {
    background-color: $well-bg;
    div.logo-text {
      width: 50%;
      img {
        height: 40px;
      }
      font-size: 32px;
    }
  }

  hr.spacer {
    margin-top: 10px !important;
    margin-bottom: 10px !important;
  }

  div.login-btns {
    width: 50%;
    margin: 0 auto;
    span {
      font-size: 14px;
    }

    i {
      margin: 0px 4px;
    }

    img {
      margin: 0px 4px 2px 4px;
    }

    a {
      position: inherit;
    }

    button {
      margin: 10px;
    }
  }

  a {
    position: absolute;
    bottom: 0;
    right: 10px;
  }

  div.info-panel {
    margin-left: 20px;

    .help-info {
      float: right;
      font-size: 10px;
      color: $primary;
      color: var(--primary);

      &:hover {
        color: $primary-hover;
        color: var(--primary-hover);
        cursor: pointer;
      }
    }

    .panel {
      border-radius: 0;

      button {
        position: relative;
        margin: 0;
        outline: none;
        top: -15px;
        right: -7px;

        .close-sym::after {
          content: '\2715';
          font-size: 10px;
        }
      }

      span.info {
        font-size: 12px;
        color: $gray-dark;

        a {
          position: relative;
          right: 0;
        }
      }
    }
  }
}

.snapshot-modal {
  .snapshot-version {
    div {
      display: inline-block;

      input {
        margin-left: 15px;
      }
      label {
        font-size: 15px;
        font-weight: lighter;
        color: $primary;
        color: var(--primary);
      }
    }
    span.version-point {
      padding: 0px 4px;
    }
  }

  .changes {
    padding-bottom: 10px;
  }

  .change {
    padding-top: 10px;
  }

  .modal-controls {
    padding-top: 20px;

    .changelog-length-warning {
      float: right;
    }
  }
  .change-controls {
    vertical-align: text-top;
    a {
      padding-right: 10px;
      i {
        padding-right: 2px;
      }
    }
  }
}

